@@ -159,6 +159,8 @@ static const char compile_error_texts[] =
   "character code point value in \\u.... sequence is too large\0"
   "digits missing in \\x{} or \\o{}\0"
   "syntax error in (?(VERSION condition\0"
+  /* 80 */ 
+  "internal error: unknown opcode in auto_possessify()\0"
   ;
 
 /* Match-time and UTF error texts are in the same format. */
